Se cambio el nombre del título

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
     <head>
     </head>
     <body>
-        <h1>Cintra Arquitectos</h1>
+        <h1>Cintra Arquitectos Example</h1>
     </body>
 </html>
