--- a/index.html
+++ b/index.html
@@ -3,12 +3,34 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <div class="jumbotron">
-      <h1>Hello, world!</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
+
+<!--
+La siguiente seccion solo fue para hacer unas pruebas, lo mas probable es que la quitemos :(
+-->
+
+
+    <section>
+      <div class="cover">
+        <div class="cover-caption">
+          <h2 class="display-2">Cintra Arquitectos</h2>
+            <form class="form-inline" action="">
+              <div class="form-group">
+                <label class="sr-only">Name</label>
+                <input type="text" class="form-control" placeholder="Juan Perez">
+              </div>
+              <div class="form-group">
+                <label class="sr-only">Email</label>
+                <input type="email" class="form-control" placeholder="juanperez@gmail.com">
+              </div>
+              <button type="submit" class="btn btn-primary-outline" name="button">Submit</button>
+            </form>
+        </div>
+      </div>
+    </section>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
