--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@ La siguiente seccion solo fue para hacer unas pruebas, lo mas probable es que la
       </div>
     </section>
 
+  <nav class="navbar bg-inverse navbar-full">
+    <div class="nav navbar-nav">
+      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="#">Features</a>
+      <a class="nav-item nav-link" href="#">Pricing</a>
+      <a class="nav-item nav-link" href="#">About</a>
+    </div>
+  </nav>
+
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://www.atlasestateagents.co.uk/javascript/tether.min.js"></script>
